create new weather widget

--- a/index.html
+++ b/index.html
@@ -20,22 +20,28 @@
         <button class="show__btn">Click here</button>
     </div>
         <div class="weather" id="weather">
-            <!-- <div class="weather__header">
-
-                <div class="weather__main">
-                    <div class="weather__city"></div>
-                    <div class="weather__status"></div>
-                </div>
-
-                <div class="weather__icon">
-                    <img src="" alt="Clouds">
-                </div>
-            </div>
-            <div class="weather__temp">14</div>
-            <div class="weather__feels-like">Feels like 13</div> -->
+            <div class="search_area">
+            <input type="text" autocomplete="off" class="search_bar" placeholder="Search for a city..." />
+            <button class="search_btn">Search</button>
         </div>
 
-    </div>
+            <div class="weather__header">
+
+                <div class="weather__main">
+                    <div class="weather__city">Chernihiv</div>
+                    <div class="weather__status">Clouds</div>
+                </div>
+            
+                <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="weather__icon" />
+            </div>
+            <div class="weather__temp">14</div>
+            <div class="weather__feels-like">Feels like 13</div>
+            <div class="wind__speed"> Wind speed</div>
+        </div>
+        </div>
+
+    
+
 
 
 
